fix height of pinned column outline (#1058)
* uppercase Buy Sell comparison

* frozen col indicator always allows foer scrollbar

--- a/vuu-ui/packages/vuu-table/src/table-next/header-cell/HeaderCell.css
+++ b/vuu-ui/packages/vuu-table/src/table-next/header-cell/HeaderCell.css
@@ -50,7 +50,7 @@
 }
 
   .vuuTableNextHeaderCell.vuuPinLeft.vuuEndPin .vuuColumnResizerNext:before {
-    --height: calc(var(--table-height) - 15px);
+    --height: calc(var(--table-height) - var(--horizontal-scrollbar-height));
     --inset-r: calc(var(--pin-width) - 2px);
     --inset-b: calc(var(--height) - 2px);
     --clip-path: polygon(
@@ -85,7 +85,7 @@
 }
 
 .vuuTableNextHeaderCell.vuuPinRight.vuuEndPin .vuuColumnResizerNext:before {
-  --height: calc(var(--table-height) - 15px);
+  --height: calc(var(--table-height) - var(--horizontal-scrollbar-height));
   --inset-r: calc(var(--pin-width) - 2px);
   --inset-b: calc(var(--height) - 2px);
   --clip-path: polygon(
